fixed width of app was cutting off logo and white gap on right

--- a/src/components/app/styling/App.scss
+++ b/src/components/app/styling/App.scss
@@ -10,18 +10,14 @@
     height: 40vmin;
   }
   
-//   .hamburger {
-//     width: 35px;
-//     height: 5px;
-//     background-color: black;
-//     margin: 6px 0;
-// }
     
   #main{
     background-color: $secondary-color;
     width: 100%;
     height: 100vh;
     position: absolute;
+    padding-top: 1rem;
+    padding-right: 4rem;
   }
   
   button {
