--- a/src/components/app/styling/footer.scss
+++ b/src/components/app/styling/footer.scss
@@ -2,15 +2,16 @@
 
 #footer{
     width: 100%;
-    height: auto;
     word-wrap: break-word; 
     background-color: $secondary-color;
     color: $highlight-color;
     text-align: center;
     font-size: 1.5rem;
     bottom: 0;
+    padding: 1rem;
   }
   
   #sayKarenLogo {
     height: 3.2rem;
   }
+
