--- a/src/components/app/styling/ham.scss
+++ b/src/components/app/styling/ham.scss
@@ -3,6 +3,7 @@
 .hamContainer {
     display: inline-block;
     cursor: pointer;
+    padding: 1rem;
 }
 
 .hamburger1, .hamburger2, .hamburger3 {
